# aldeci-core

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  package.json  pyproject.toml  requirements.txt  sitecustomize.py
sdks/python/: README.md  pyproject.toml  setup.cfg
sdks/python/aldeci_client/models/: acceptance_review.py  acceptance_status.py  access_event_req.py  access_log_in.py  access_pattern_create.py  access_review_create.py  account_create.py  account_in.py  acknowledge_body.py  acknowledge_comm_request.py  acknowledge_request.py  acknowledge_response.py  action_complete.py  action_create.py  action_log_create.py  action_response.py  action_status.py  action_type.py  activity_create.py  activity_record.py  activity_type.py  actor_activity_update.py  actors_response.py  ad_attack_path_request_graph_type_0_additional_property_item.py  ad_risks_request.py  ad_risks_request_ad_objects_item.py  add_approval_api_v1_changes_change_id_approve_post_response_add_approval_api_v1_changes_change_id_approve_post.py  add_approval_request.py  add_blue_team_action_api_v1_purple_team_exercises_exercise_id_response_post_response_add_blue_team_action_api_v1_purple_team_exercises_exercise_id_response_post.py  add_clusters_request.py  add_comment_request.py  add_comment_request_metadata_type_0.py  add_comparison_request.py  add_context_request_data.py  add_control_request.py  add_database_api_v1_db_security_inventory_post_response_add_database_api_v1_db_security_inventory_post.py  add_database_request.py  add_database_request_metadata_type_0.py  add_database_request_tags_type_0.py  add_dependency_request.py  (+1742 more)
sdks/python/aldeci_security_intelligence_platform_client/: __init__.py
sdks/python/aldeci_security_intelligence_platform_client/models/: __init__.py  abandoned_resource_create.py  abuse_event_create.py  accept_request.py  accept_risk.py  access_event_req_details_type_0.py  access_level.py  account_register.py  ack_response.py  acknowledge_alert_request.py  acknowledge_violation_request.py  acquire_lock_request.py  action_item_create.py  action_response_parameters.py  action_response_result_type_0.py  active_hunts_response.py  activity.py  activity_metadata.py  activity_record_details.py  actor_create.py  ad_attack_path_request.py  ad_attack_path_request_graph_type_0.py  add_action_request.py  add_alias_request.py  (+1686 more)
(+10422 files in other folders)
