[tool.poetry]
name = "aldeci-client"
version = "1.0.0"
description = "Typed Python client for the ALDECI Security Intelligence Platform API"
authors = ["FixOps <info@devopsai.co>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DevOpsMadDog/Fixops"
repository = "https://github.com/DevOpsMadDog/Fixops"
keywords = ["aldeci", "security", "aspm", "ctem", "cspm", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
packages = [
    { include = "aldeci_client" },
]
include = ["aldeci_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21"
mypy = ">=1.0"
ruff = ">=0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
