[metadata]
name = aldeci-client
version = 1.0.0
description = Typed Python client for the ALDECI Security Intelligence Platform API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = FixOps
author_email = info@devopsai.co
url = https://github.com/DevOpsMadDog/Fixops
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Typing :: Typed
keywords = aldeci security aspm ctem cspm api-client

[options]
packages = find:
python_requires = >=3.10
install_requires =
    httpx>=0.23.0,<0.29.0
    attrs>=22.2.0
    python-dateutil>=2.8.0

[options.packages.find]
include = aldeci_client*

[options.package_data]
aldeci_client = py.typed
